--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,19 @@
     <p class="alert"><%= alert %></p>
   <% end %>
 
+  <% if user_signed_in? %>
+    <ul>
+      <li><%= link_to "Submit link", new_link_path %></li>
+      <li><%= link_to "Account", edit_user_registration_path %></li>
+      <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+    </ul>
+  <% else %>
+    <ul>
+      <li><%= link_to "Sign up", new_user_registration_path %></li>
+      <li><%= link_to "Log in", new_user_session_path %></li>
+    </ul>
+  <% end %>
+
 <%= yield %>
 
 </body>
